init
added api project
added tests project
added solution documents
	changelog: running log of modifications on project
	concept: general acceptance criteria and todo ideas
	troubleshooting: common troubleshooting techniques and tips
	structure: general folder structure
added common helper classes (notifications, healthchecks, etc)
added services for BLL logic
added robot and base class (audit columns) as dbset => botomatcontext
added robotType enum
added robot controller
began irobotservice
	any robot query/command must go through the irobotservice
i dont like the word Task as its amiguous with teh async/await word task so this app domain UL will use errand
added robotcontroller functionality to get, getmany, and delete
added errand entity
made fk on errand icanperformerrand to allow us to use non-robot types (perhaps cyborgs and what not)
added errand staty and type enums for value conversion and east of select generation
added a seed method but it kept failing. TODO: understand seed method failure
added robot and errand view models
modified irobotservice
added robotservice