@@ -341,3 +341,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /RedVentures.Bot-O-Mat.API/_Logs
+*.db
